# ComputationalMathematics

./: README.md
Convex Optimization - Geometric Programming/include/: newton.h
Convex Optimization - Geometric Programming/src/: example1.cpp
Diffusion 2D/: CMakeLists.txt  README.md  Visualization.ipynb
Diffusion 2D/include/: diff2d.h
Diffusion 2D/src/: diff2d.cpp  main.cpp
Geometric Programming/: CMakeLists.txt  Slides.pptx
Geometric Programming/src/: example2.cpp  example3.cpp  newton.cpp
Interpolation/: CMakeLists.txt  Interpolation_Task.sln  README.md
Interpolation/Interpolation_Task/: Interpolation_Task.cpp  Interpolation_Task.h  Interpolation_Task.qrc  Interpolation_Task.ui  Interpolation_Task.vcxproj  Interpolation_Task.vcxproj.filters  interpolationalgorithms.cpp  interpolationalgorithms.h  main.cpp  random.txt
Interpolation/data/: data.txt
Interpolation/exe/: Interpolation.lnk  random.txt
Interpolation/include/: interpolationalgorithms.h  tma.h
Interpolation/src/: Interpolation.cpp  interpolationalgorithms.cpp  tma.cpp
Mandelbrot Set/: CMakeLists.txt  README.md
Mandelbrot Set/include/: complex.h
Mandelbrot Set/src/: Mandelbrot set.cpp  complex.cpp
Percolation/: CMakeLists.txt  README.md
Percolation/include/: percolation.h  unionfind.h
Percolation/src/: main.cpp  percolation.cpp  unionfind.cpp
Spherical Expansion/: CMakeLists.txt  README.md
Spherical Expansion/src/: main.cpp  solver.cpp  solver.h
Tucker Decomposition/: CMakeLists.txt  README.md
Tucker Decomposition/include/: tucker.h
Tucker Decomposition/src/: main.cpp  (+1 more)
(+39 files in other folders)
